<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.intern.edel.Login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/label"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"

        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        >
        <TextView
            android:layout_alignParentTop="true"
            android:id="@+id/textview_connect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connect_social"
            />
        <ImageButton
            android:id="@+id/icon_facebook"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/facebook_icon"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textview_connect"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="connect_with_facebook_account"

            />
        <TextView
            android:id="@+id/textview_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_email"
            android:layout_below="@id/icon_facebook"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/edt_email"
            android:layout_below="@id/textview_login"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/edt_password"
            android:layout_below="@id/edt_email"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"
            />
        <TextView
            android:id="@+id/textview_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/colorPrimary"
            android:textStyle="italic"
            android:layout_below="@id/edt_password"
            android:layout_alignParentRight="true"
            android:onClick="signUp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textview_signup"
            android:layout_centerHorizontal="true"
            android:text="Login"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"
            android:onClick="logIn"
            />
    </RelativeLayout>


</LinearLayout>
