<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.intern.edel.Signup">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/label"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_weight="1"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"

        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:paddingBottom="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        >



        <EditText
            android:inputType="textEmailAddress"
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/edt_email"
            android:layout_below="@id/textview_login"
            android:layout_alignParentEnd="true"
            android:textSize="15sp"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            />
        <EditText
            android:inputType="textPassword"
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:hint="@string/edt_password"
            android:layout_below="@id/edt_email"
            android:textSize="15sp"
            android:fontFamily="sans-serif"
            android:textStyle="italic"
            android:layout_marginBottom="10dp"
            android:padding="5dp"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/edt_password"
            android:layout_centerHorizontal="true"
            android:text="Sign up"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"
            android:onClick="creat_new_account"
            />
    </RelativeLayout>


</LinearLayout>
